--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
     <h1>Welcome to My Web Page!</h1>
-    <p>This is a simple webpage created as a dummy HTML file with CSS.</p>
+    <p>This is a <b>simple</b> webpage created as a dummy HTML file with CSS.</p>
 </body>
 </html>
